tinyc/test/bad/cast-from-void.c
void f() {}
int main()
{
    1 + (int) f();
    return 0;
}
